# fmdscp

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build-osx.sh  build.bat  build.sh
cmake/modules/: FindMySQL.cmake  FindSoci.cmake
src/: cloudappender.cpp  cloudappender.h  cloudclient.cpp  cloudclient.h  config.cpp  config.h  dbpool.cpp  dbpool.h  destinations_controller.cpp  destinations_controller.h  dicomsender.cpp  dicomsender.h  find.cpp  find.h  httpserver.cpp  httpserver.h  jwtpp.cpp  jwtpp.h  main.cpp  model.h  move.cpp  move.h  myscp.cpp  myscp.h  ndcappender.cpp  ndcappender.h  sender.cpp  sender.h  senderservice.cpp  senderservice.h  server.cpp  server.h  store.cpp  store.h  util.cpp  util.h
src/win/: version.rc
